iOS and Syntax update

--- a/DevExpressGrid/DevExpressGrid.csproj
+++ b/DevExpressGrid/DevExpressGrid.csproj
@@ -18,10 +18,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Update="ui\EditorPage.xaml">
+    <EmbeddedResource Update="UI\EditorPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
-    <EmbeddedResource Update="ui\ProfilePage.xaml">
+    <EmbeddedResource Update="UI\ProfilePage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
   </ItemGroup>
