--- a/DevExpressGrid.Android/DevExpressGrid.Android.csproj
+++ b/DevExpressGrid.Android/DevExpressGrid.Android.csproj
@@ -95,22 +95,16 @@
     <AndroidResource Include="Resources\mipmap-xxxhdpi\launcher_foreground.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawable\ic_facebook_logo.png" />
-  </ItemGroup>
-  <ItemGroup>
     <ProjectReference Include="..\DevExpressGrid\DevExpressGrid.csproj">
       <Project>{B47F6B8F-A256-4EFE-B6F3-77879EFFA899}</Project>
       <Name>DevExpressGrid</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawable\ic_add.png" />
+    <AndroidResource Include="Resources\drawable\add.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawable\ic_name.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <AndroidResource Include="Resources\drawable\ic_birth.png" />
+    <AndroidResource Include="Resources\drawable\logo.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
