--- a/DevExpressGrid.iOS/DevExpressGrid.iOS.csproj
+++ b/DevExpressGrid.iOS/DevExpressGrid.iOS.csproj
@@ -139,4 +139,10 @@
       <Name>DevExpressGrid</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\add.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\logo.png" />
+  </ItemGroup>
 </Project>
